k8s/overlays/local/prometheus/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus-local
  labels:
    istio-injection: enabled
