k8s/overlays/local/prometheus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus-local
  labels:
    environment: local
    service: prometheus
    project: solidity-security
