k8s/overlays/local/prometheus/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: prometheus-ingress-policy
  namespace: prometheus-local
spec:
  selector:
    matchLabels:
      app: prometheus
  mtls:
    mode: PERMISSIVE
